# Visual_Servoing_Tiago

./: Dockerfile  README.md  build.sh  launch_bash.sh
apriltags_ws/: calibration.bag  configuration_simulation_rviz.rviz  controller.rviz  exponentiqlfilter_quaternion  position grapg  rqt_multiplot.txt  rqt_multiplot.xml  rqt_multiplot_depth.xml  rqt_multiplot_filter.xml  rqt_multiplot_quaternion.xml  rqt_position_hand2target.xml
apriltags_ws/.catkin_tools/profiles/default/: devel_collisions.txt
apriltags_ws/src/apriltag_ros/apriltag_ros/: CMakeLists.txt  package.xml
apriltags_ws/src/apriltag_ros/apriltag_ros/config/: tags.yaml
apriltags_ws/src/inria_eiquadprog/: CMakeLists.txt  package.xml
apriltags_ws/src/inria_eiquadprog/include/inria_eiquadprog/: inria_eiquadprog.hpp
apriltags_ws/src/inria_maths/: CMakeLists.txt  package.xml
apriltags_ws/src/inria_maths/include/inria_maths/: AutoRegressive.h  ControlDampedIntegral.hpp  ControlIntegral.hpp  ControlProportionalBarrier.hpp  DiffKKTQuadProg.h  DifferentialDrive.hpp  FilterBacklash.hpp  FilterDifferentiator.hpp  FilterElasticityPos.hpp  FilterElasticityVel.hpp  FilterEncoderDifferentiation.hpp  FilterIIR.hpp  LinearRegression.hpp  PolyFit.hpp  Polytope.hpp  Pose2d.h  RecursiveLeastSquares.hpp  Sign.h  SoftMax.h  Spline.hpp  SplineCubic.hpp  SplineLinear.hpp  SplineQuintic.hpp  Sylvester.h  TimeSeries.hpp
apriltags_ws/src/inria_maths/src/: DifferentialDrive.cpp  LinearRegression.cpp  PolyFit.cpp  Polytope.cpp  RecursiveLeastSquares.cpp  Spline.cpp  SplineCubic.cpp  SplineLinear.cpp  SplineQuintic.cpp  Sylvester.cpp
apriltags_ws/src/inria_maths/test/: testAutoRegressive.cpp  testAxisAngle.cpp  testControllerProportionalBarrier.cpp  testDampedIntegral.cpp  testFilterPoseCommand.cpp  testFilters.cpp  testLinearRegression.cpp  testQPDiff.cpp  testRLS.cpp  testSoftMax.cpp  testSylvester.cpp  testTimeSeries.cpp  testTrajectory.cpp  testVelocityDifferentiation.cpp
apriltags_ws/src/inria_plot/: CMakeLists.txt  package.xml
apriltags_ws/src/inria_plot/src/: PlotGlobal.cpp
apriltags_ws/src/inria_plot/test/: testPlot.cpp  testStream.cpp
apriltags_ws/src/inria_utils/: CMakeLists.txt  package.xml
apriltags_ws/src/inria_utils/src/: Chrono.cpp  SpaceMouse.cpp  ViveTracking.cpp
apriltags_ws/src/inria_utils/test/: testChrono.cpp  testFilesystem.cpp  testImporterCSV.cpp  testTimeSeriesBuffer.cpp  testTransportValueUDP.cpp
apriltags_ws/src/mkfilter_catkin/: CMakeLists.txt  README.md  package.xml
apriltags_ws/src/mkfilter_catkin/include/mkfilter/: MKFilter.h
apriltags_ws/src/mkfilter_catkin/src/: MKFilter.cpp  complex.cpp  mkfilter.cpp
apriltags_ws/src/mkfilter_catkin/test/: testMKFilter.cpp
(+34 files in other folders)
