<?xml version="1.0"?>
<package format="2">
    <name>inria_maths</name>
    <version>0.0.0</version>
    <description>
        Various maths tools
    </description>
    <maintainer email="leph.quentinrouxel@gmail.com">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>inria_plot</depend>
    <depend>inria_utils</depend>
    <depend>mkfilter_catkin</depend>
    <depend>inria_eiquadprog</depend>
</package>
